-
Bug
-
Resolution: Done
-
P1: Critical
-
6.0.1, 6.1.3, 6.2.0 RC, 6.2.1
-
Desktop
-
-
6b02473e1e4b559cb81c007a35a07746d843398c (qt/qtbase/dev) ec613a4649844e0eaa2a64444732eef7eeef2b81 (qt/qtbase/6.2)
New lines are ignored with Osaka font with Qt6. It works with Qt5
| For Gerrit Dashboard: QTBUG-96880 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 384024,2 | Fix overlapping text for Osaka font on macOS | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 384197,2 | Fix overlapping text for Osaka font on macOS | 6.2 | qt/qtbase | Status: MERGED | +2 | 0 |